287 iconography Global --> missing "Download Sketch File"

--- a/src/assets/documents/components/iconography.html
+++ b/src/assets/documents/components/iconography.html
@@ -1,176 +1,169 @@
 <html>
-  <head></head>
 
-  <body>
-    <div class="doc-category-title">
-      Foundation
-      <span class="docs-markdown-h3" id="contents">
-        <span header-link="contents"></span>Contents</span
-      >
-    </div>
-    <div class="doc-title-1">Iconography</div>
-    <div class="doc-desc-1">
-      Iconography uses symbols to represent objects, commands or common actions
-      visually. They should be simple, bold enough to grab attention, and leave
-      a lasting impression.
-    </div>
+<head></head>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Icon Fonts
-      <span class="docs-markdown-h3" id="iconfonts">
-        <span header-link="iconfonts"></span>Icon Fonts</span
-      >
-    </div>
-    <div class="doc-desc-2">
-      <p>
-        The approved icon set is two typefaces called
-        <a class="doc-desc-2-highlight-text" href="https://fontawesome.com"
-          >Font Awesome</a
-        >
-        and
-        <a
-          class="doc-desc-2-highlight-text"
-          href="https://material.io/tools/icons/?style=baseline"
-          >Material Icon Font</a
-        >
-        , which provides flexible, scalable vector icons that can be plugged
-        into any application without taxing the browser with a multitude of icon
-        images.
-      </p>
-      <p>
-        To search through all the icons, have a look at
-        <a
-          class="doc-desc-2-highlight-text"
-          href="https://fontawesome.com/icons?d=gallery"
-          >Font Awesome page</a
-        >
-        and
-        <a
-          class="doc-desc-2-highlight-text"
-          href="https://material.io/tools/icons/?style=baseline"
-        >
-          Material Icon page </a
-        >.
-      </p>
-    </div>
+<body>
+  <div class="doc-category-title">
+    Foundation
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">Iconography</div>
+  <div class="doc-desc-1">
+    Iconography uses symbols to represent objects, commands or common actions visually. They should be simple, bold enough to
+    grab attention, and leave a lasting impression.
+  </div>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Sizes
-      <span class="docs-markdown-h3" id="sizes">
-        <span header-link="sizes"></span>Sizes</span
-      >
-    </div>
-    <div class="doc-desc-2">
-      Icons are auto-scaled to provide 2 sizes: normal (18px) and large (24px)
-    </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Icon Fonts
+    <span class="docs-markdown-h3" id="iconfonts">
+      <span header-link="iconfonts"></span>Icon Fonts</span>
+  </div>
+  <div class="doc-desc-2">
+    <p>
+      The approved icon set is two typefaces called
+      <a class="doc-desc-2-highlight-text" href="https://fontawesome.com">Font Awesome</a>
+      and
+      <a class="doc-desc-2-highlight-text" href="https://material.io/tools/icons/?style=baseline">Material Icon Font</a>
+      , which provides flexible, scalable vector icons that can be plugged into any application without taxing the browser with
+      a multitude of icon images.
+    </p>
+    <p>
+      To search through all the icons, have a look at
+      <a class="doc-desc-2-highlight-text" href="https://fontawesome.com/icons?d=gallery">Font Awesome page</a>
+      and
+      <a class="doc-desc-2-highlight-text" href="https://material.io/tools/icons/?style=baseline">
+        Material Icon page </a>.
+    </p>
+  </div>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Examples
-      <span class="docs-markdown-h3" id="examples">
-        <span header-link="examples"></span>Examples</span
-      >
-    </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Sizes
+    <span class="docs-markdown-h3" id="sizes">
+      <span header-link="sizes"></span>Sizes</span>
+  </div>
+  <div class="doc-desc-2">
+    Icons are auto-scaled to provide 2 sizes: normal (18px) and large (24px)
+  </div>
 
-    <div class="doc-title-4" style="margin-top: 29px">Font Awesome</div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
 
-    <div class="icons-container">
-      <i class="far fa-edit icon-cell"></i>
-      <i class="far fa-clone icon-cell"></i>
-      <i class="far fa-copy icon-cell"></i>
-      <i class="far fa-eye icon-cell"></i>
-      <i class="far fa-eye-slash icon-cell"></i>
-      <i class="far fa-hdd icon-cell"></i>
-      <i class="far fa-keyboard icon-cell"></i>
-      <i class="far fa-object-group icon-cell"></i>
-      <i class="far fa-object-ungroup icon-cell"></i>
-      <i class="far fa-comment icon-cell"></i>
-      <i class="far fa-comment-alt icon-cell"></i>
-      <i class="far fa-comment-dots icon-cell"></i>
-      <i class="far fa-comments icon-cell"></i>
-      <i class="far fa-bell icon-cell"></i>
-      <i class="far fa-bell-slash icon-cell"></i>
-      <i class="far fa-calendar icon-cell"></i>
-      <i class="far fa-calendar-alt icon-cell"></i>
-      <i class="far fa-calendar-check icon-cell"></i>
-      <i class="far fa-check-circle icon-cell"></i>
-      <i class="far fa-check-square icon-cell"></i>
-      <i class="far fa-clipboard icon-cell"></i>
-      <i class="far fa-file icon-cell"></i>
-      <i class="far fa-file-alt icon-cell"></i>
-      <i class="far fa-flag icon-cell"></i>
-      <i class="far fa-folder icon-cell"></i>
-      <i class="far fa-folder-open icon-cell"></i>
-      <i class="far fa-paper-plane icon-cell"></i>
-      <i class="far fa-trash-alt icon-cell"></i>
-      <i class="far fa-file-archive icon-cell"></i>
-      <i class="far fa-file-audio icon-cell"></i>
-      <i class="far fa-file-code icon-cell"></i>
-      <i class="far fa-file-excel icon-cell"></i>
-      <i class="far fa-file-image icon-cell"></i>
-    </div>
+  <div class="doc-title-4" style="margin-top: 29px">Font Awesome</div>
 
-    <div class="doc-title-4 mt-40">Material Icon</div>
+  <div class="icons-container">
+    <i class="far fa-edit icon-cell"></i>
+    <i class="far fa-clone icon-cell"></i>
+    <i class="far fa-copy icon-cell"></i>
+    <i class="far fa-eye icon-cell"></i>
+    <i class="far fa-eye-slash icon-cell"></i>
+    <i class="far fa-hdd icon-cell"></i>
+    <i class="far fa-keyboard icon-cell"></i>
+    <i class="far fa-object-group icon-cell"></i>
+    <i class="far fa-object-ungroup icon-cell"></i>
+    <i class="far fa-comment icon-cell"></i>
+    <i class="far fa-comment-alt icon-cell"></i>
+    <i class="far fa-comment-dots icon-cell"></i>
+    <i class="far fa-comments icon-cell"></i>
+    <i class="far fa-bell icon-cell"></i>
+    <i class="far fa-bell-slash icon-cell"></i>
+    <i class="far fa-calendar icon-cell"></i>
+    <i class="far fa-calendar-alt icon-cell"></i>
+    <i class="far fa-calendar-check icon-cell"></i>
+    <i class="far fa-check-circle icon-cell"></i>
+    <i class="far fa-check-square icon-cell"></i>
+    <i class="far fa-clipboard icon-cell"></i>
+    <i class="far fa-file icon-cell"></i>
+    <i class="far fa-file-alt icon-cell"></i>
+    <i class="far fa-flag icon-cell"></i>
+    <i class="far fa-folder icon-cell"></i>
+    <i class="far fa-folder-open icon-cell"></i>
+    <i class="far fa-paper-plane icon-cell"></i>
+    <i class="far fa-trash-alt icon-cell"></i>
+    <i class="far fa-file-archive icon-cell"></i>
+    <i class="far fa-file-audio icon-cell"></i>
+    <i class="far fa-file-code icon-cell"></i>
+    <i class="far fa-file-excel icon-cell"></i>
+    <i class="far fa-file-image icon-cell"></i>
+  </div>
 
-    <div class="icons-container">
-      <i class="material-icons icon-cell">check</i>
-      <i class="material-icons icon-cell">close</i>
-      <i class="material-icons icon-cell">refresh</i>
-      <i class="material-icons icon-cell">autorenew</i>
-      <i class="material-icons icon-cell">search</i>
-      <i class="material-icons icon-cell">keyboard_arrow_up</i>
-      <i class="material-icons icon-cell">keyboard_arrow_down</i>
-      <i class="material-icons icon-cell">keyboard_arrow_left</i>
-      <i class="material-icons icon-cell">keyboard_arrow_right</i>
-      <i class="material-icons icon-cell">unfold_more</i>
-      <i class="material-icons icon-cell">more_horiz</i>
-      <i class="material-icons icon-cell">dehaze</i>
-      <i class="material-icons icon-cell">link</i>
-      <i class="material-icons icon-cell">share</i>
-      <i class="material-icons icon-cell">trending_up</i>
-      <i class="material-icons icon-cell">timeline</i>
-      <i class="material-icons icon-cell">schedule</i>
-      <i class="material-icons icon-cell">filter_list</i>
-      <i class="material-icons icon-cell">folder</i>
-      <i class="material-icons icon-cell">add</i>
-      <i class="material-icons icon-cell">create</i>
-      <i class="material-icons icon-cell">save</i>
-      <i class="material-icons icon-cell">sms_failed</i>
-      <i class="material-icons icon-cell">error</i>
-      <i class="material-icons icon-cell">cancel</i>
-      <i class="material-icons icon-cell">check_circle</i>
-      <i class="material-icons icon-cell">warning</i>
-      <i class="material-icons icon-cell">person</i>
-      <i class="material-icons icon-cell">description</i>
-      <i class="material-icons icon-cell">build</i>
-      <i class="material-icons icon-cell">reply</i>
-      <i class="material-icons icon-cell">home</i>
-      <i class="material-icons icon-cell">delete</i>
-    </div>
+  <div class="doc-title-4 mt-40">Material Icon</div>
 
-    <div class="doc-divider"></div>
+  <div class="icons-container">
+    <i class="material-icons icon-cell">check</i>
+    <i class="material-icons icon-cell">close</i>
+    <i class="material-icons icon-cell">refresh</i>
+    <i class="material-icons icon-cell">autorenew</i>
+    <i class="material-icons icon-cell">search</i>
+    <i class="material-icons icon-cell">keyboard_arrow_up</i>
+    <i class="material-icons icon-cell">keyboard_arrow_down</i>
+    <i class="material-icons icon-cell">keyboard_arrow_left</i>
+    <i class="material-icons icon-cell">keyboard_arrow_right</i>
+    <i class="material-icons icon-cell">unfold_more</i>
+    <i class="material-icons icon-cell">more_horiz</i>
+    <i class="material-icons icon-cell">dehaze</i>
+    <i class="material-icons icon-cell">link</i>
+    <i class="material-icons icon-cell">share</i>
+    <i class="material-icons icon-cell">trending_up</i>
+    <i class="material-icons icon-cell">timeline</i>
+    <i class="material-icons icon-cell">schedule</i>
+    <i class="material-icons icon-cell">filter_list</i>
+    <i class="material-icons icon-cell">folder</i>
+    <i class="material-icons icon-cell">add</i>
+    <i class="material-icons icon-cell">create</i>
+    <i class="material-icons icon-cell">save</i>
+    <i class="material-icons icon-cell">sms_failed</i>
+    <i class="material-icons icon-cell">error</i>
+    <i class="material-icons icon-cell">cancel</i>
+    <i class="material-icons icon-cell">check_circle</i>
+    <i class="material-icons icon-cell">warning</i>
+    <i class="material-icons icon-cell">person</i>
+    <i class="material-icons icon-cell">description</i>
+    <i class="material-icons icon-cell">build</i>
+    <i class="material-icons icon-cell">reply</i>
+    <i class="material-icons icon-cell">home</i>
+    <i class="material-icons icon-cell">delete</i>
+  </div>
 
-    <div class="doc-title-2">
-      Best Practice
-      <span class="docs-markdown-h3" id="best_practices">
-        <span header-link="best_practices"></span>Best Practices</span
-      >
-    </div>
+  <div class="doc-divider"></div>
 
-    <div class="doc-desc-2">
-      <ul class="doc-list">
-        <li>All navigation related icons should always be solid.</li>
-        <li>
-          When scaling down icons, smaller elements like circles should be solid
-          to help with legibility.
-        </li>
-        <li>
-          When using icons as actions, all touch targets need to be 40px or
-          higher.
-        </li>
-      </ul>
-    </div>
-  </body>
+  <div class="doc-title-2">
+    Best Practice
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    <ul class="doc-list">
+      <li>All navigation related icons should always be solid.</li>
+      <li>
+        When scaling down icons, smaller elements like circles should be solid to help with legibility.
+      </li>
+      <li>
+        When using icons as actions, all touch targets need to be 40px or higher.
+      </li>
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link=""></div>
+
+
+</body>
+
 </html>
