292 Form Field --> when hover over "X" button, it should be a HAND cursor instad of type cursor

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -490,6 +490,9 @@ td.mat-cell,
     margin-right: 8px;
     font-size: 14px;
   }
+  .mat-form-field-suffix {
+    cursor: pointer;
+  }
   &.mat-form-field-appearance-legacy {
     .mat-form-field-infix {
       // margin-bottom: 5px;
