--- a/src/assets/examples/select-multiple-selection/select-multiple-selection.component.html
+++ b/src/assets/examples/select-multiple-selection/select-multiple-selection.component.html
@@ -1,6 +1,7 @@
 <div class="example-wrapper">
   <mat-form-field>
-    <mat-select placeholder="states" disableOptionCentering disableRipple [formControl]="toppings" multiple panelClass="viz-select viz-select-multi">
+    <mat-label>States</mat-label>
+    <mat-select placeholder="Select states" disableOptionCentering disableRipple [formControl]="toppings" multiple panelClass="viz-select viz-select-multi">
       <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
     </mat-select>
   </mat-form-field>
