295 Menu --> all of the menus are missing hover state

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -242,7 +242,7 @@ td.mat-cell,
         height: 40px;
         &:hover {
           color: $viz-purple;
-          background-color: #ffffff;
+          background-color: #f1f1f1;
           .mat-icon {
             color: $viz-purple
           }
