296, 297 Dialog --> text inside button should be WHITE -> please apply globally Dialog --> space between buttons should be 8px -> please apply globally

--- a/src/assets/examples/dialog-basic/dialog-contain.component.html
+++ b/src/assets/examples/dialog-basic/dialog-contain.component.html
@@ -38,7 +38,7 @@
 
 
   <div class="modal-footer">
-    <button mat-button color="primary" (click)="onNoClick()">Cancel</button>
+    <button mat-button class="modal-cancel" color="primary" (click)="onNoClick()">Cancel</button>
     <button mat-flat-button color="primary" class="modal-addbtn" (click)="onNoClick()">Add</button>
   </div>
 </div>
