--- a/src/assets/examples/dialog-alert/dialog-contain.component.html
+++ b/src/assets/examples/dialog-alert/dialog-contain.component.html
@@ -14,6 +14,6 @@
 </div>
 <mat-divider></mat-divider>
 <div class="dialog-footer">
-  <button mat-flat-button color="primary" (click)="closeDialog()">Discard</button>
-  <button mat-button color="primary" (click)="closeDialog()">Cancel</button>
+  <button tabindex="-1" mat-flat-button color="primary" (click)="closeDialog()">Discard</button>
+  <button tabindex="-1" mat-button color="primary" (click)="closeDialog()">Cancel</button>
 </div>
