--- a/src/assets/examples/dialog-basic/dialog-contain.component.scss
+++ b/src/assets/examples/dialog-basic/dialog-contain.component.scss
@@ -33,6 +33,9 @@
     background: #ffffff;
     box-shadow: inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
   }
+  &-cancel {
+    margin-right: 8px;
+  }
   &-addbtn {
     margin-top: 24px;
     margin-right: 24px;
