--- a/src/assets/examples/dialog-complex/dialog-complex-popup.component.html
+++ b/src/assets/examples/dialog-complex/dialog-complex-popup.component.html
@@ -18,6 +18,6 @@
 </div>
 <mat-divider></mat-divider>
 <div class="dialog-footer">
-  <button mat-flat-button color="primary" (click)="closeDialog()">OK</button>
-  <button mat-button color="primary" (click)="closeDialog()">No, Thanks</button>
+  <button tabindex="-1" mat-flat-button color="primary" (click)="closeDialog()">OK</button>
+  <button tabindex="-1" mat-button color="primary" (click)="closeDialog()">No, Thanks</button>
 </div>
