--- a/src/assets/examples/dialog-content/dialog-content-popup.component.html
+++ b/src/assets/examples/dialog-content/dialog-content-popup.component.html
@@ -33,6 +33,6 @@
 </div>
 <mat-divider></mat-divider>
 <div class="dialog-footer">
-  <button mat-flat-button color="primary" (click)="closeDialog()">Install</button>
-  <button mat-button color="primary" (click)="closeDialog()">Cancel</button>
+  <button tabindex="-1" mat-flat-button color="primary" (click)="closeDialog()">Install</button>
+  <button tabindex="-1" mat-button color="primary" (click)="closeDialog()">Cancel</button>
 </div>
