--- a/src/assets/examples/dialog-content/dialog-content-popup.component.scss
+++ b/src/assets/examples/dialog-content/dialog-content-popup.component.scss
@@ -27,6 +27,7 @@
   padding: 24px;
   box-sizing: border-box;
   button {
+    margin-left: 8px;
     float: right;
     &:nth-last-child() {
       margin-left: 16px;
