298, 299 Dialog --> "Basic Dialog when just open - when first open the dialog, the form field should be in resting state -> ""Type here…"" should be #696969, border bottom should be #C3C3C3 Dialog --> "Basic Dialog when start typing - when click on the form field, ""Type here…"" will disappear instantly

--- a/src/assets/examples/dialog-complex/dialog-complex-popup.component.html
+++ b/src/assets/examples/dialog-complex/dialog-complex-popup.component.html
@@ -10,7 +10,8 @@
   </div>
 
   <mat-form-field class="dialog-content-input">
-    <input matInput value="type here...">
+    <mat-label></mat-label>
+    <input tabindex="-1" matInput placeholder="Type here...">
   </mat-form-field>
 
 
