--- a/libs/style.scss
+++ b/libs/style.scss
@@ -493,6 +493,9 @@ td.mat-cell,
   .mat-form-field-suffix {
     cursor: pointer;
   }
+  &.mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: #c3c3c3;
+  }
   &.mat-form-field-appearance-legacy {
     .mat-form-field-infix {
       // margin-bottom: 5px;
