260 change back to layout

--- a/src/assets/documents/components/card.html
+++ b/src/assets/documents/components/card.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title">
-    Layouts
+    Layout
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
