--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title">
-    Get Started
+    Getting Started
     <span class="docs-markdown-h3"
           id="contents">
       <span header-link="contents"></span>contents</span>
