302 Dialog --> missing "MODIFIED" next to "Confirmation Dialog" and "Complex Dialog"

--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -59,7 +59,7 @@
       <div app-docs-example="dialog-content"></div>
     </div>
 
-    <div class="doc-title-4 mb-8">Confirmation Dialog</div>
+    <div class="doc-title-4 mb-8">Confirmation Dialog<span modified-label></span></div>
     <div class="doc-desc-2">
       Confirmation dialogs give users the ability to provide final confirmation of a choice before committing to it, so they have
       a chance to change their minds if necessary. If the user confirms a choice, it’s carried out. Otherwise, the user can
@@ -69,7 +69,7 @@
       <div app-docs-example="dialog-confirmation"></div>
     </div>
 
-    <div class="doc-title-4 mb-8">Complex Dialog</div>
+    <div class="doc-title-4 mb-8">Complex Dialog<span modified-label></span></div>
     <div class="doc-desc-2">
       Complex dialogs contains a series of tasks, such as radio buttons, checkboxes, form fields or dropdowns that require a series
       of tasks to complete.
