292 Datepicker --> missing "MODIFIED" label next to "Daterange Picker", "Monthrange Picker", "Daterange Picker with Min & Max Validation"

--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -76,7 +76,7 @@
       <div app-docs-example="date-picker-emulating"></div>
     </div>
 
-    <div class="doc-title-4 mb-8">Daterange Picker</div>
+    <div class="doc-title-4 mb-8">Daterange Picker<span modified-label></span></div>
     <div class="doc-desc-2">
       This date range picker component creates a dropdown of two calendars for user selecting a range of dates, times, or predefined
       ranges like “Quarter 1”, “Quarter 2”, “Quarter 3” and “Quarter 4”.
@@ -85,7 +85,7 @@
       <div app-docs-example="date-picker-basic"></div>
     </div>
 
-    <div class="doc-title-4 mb-8">Monthrange Picker</div>
+    <div class="doc-title-4 mb-8">Monthrange Picker<span modified-label></span></div>
     <div class="doc-desc-2">
       Use in forms to let user enter a month range.
     </div>
@@ -93,7 +93,7 @@
       <div app-docs-example="month-picker-range"></div>
     </div>
 
-    <div class="doc-title-4 mb-8">Daterange Picker with Min & Max Validation</div>
+    <div class="doc-title-4 mb-8">Daterange Picker with Min & Max Validation<span modified-label></span></div>
     <div class="doc-example-container">
       <div app-docs-example="date-picker-range-validation"></div>
     </div>
