reduce component height 264 ~ 283, 285

--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -24,7 +24,7 @@
     <!-- <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template> -->
 
 
-    <iframe class="viewport-iframe" frameborder="0" [src]="exampleURL | safe" sandbox="allow-same-origin allow-scripts allow-forms" [ngClass]="iframeClass()"></iframe>
+    <iframe class="viewport-iframe" frameborder="0" [src]="exampleURL | safe" sandbox="allow-same-origin allow-scripts allow-forms" [ngClass]="iframeClass()" [ngStyle]="getIframeStyle()"></iframe>
 
   </div>
 
