--- a/src/assets/examples/paginator-basic/paginator-basic.component.html
+++ b/src/assets/examples/paginator-basic/paginator-basic.component.html
@@ -1,2 +1,3 @@
-<mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons>
-</mat-paginator>
+<div class="paginator-example">
+    <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+</div>
