--- a/src/assets/examples/paginator-basic/paginator-basic.component.scss
+++ b/src/assets/examples/paginator-basic/paginator-basic.component.scss
@@ -1,7 +1,9 @@
-:host {
-  ::ng-deep {
-    .mat-paginator-container {
-      justify-content: center;
-    }
-  }
+.paginator-example {
+    height: 200px;
+    & > * {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+    }    
 }
