294 Select		In Review	"Select with Option Groups - capital ""S"" should be ""State"" - missing ""Select a State"" - faulty dropdown, cannot click on the items - doprdown width should be the same as the field -> please see reference link"

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -1091,6 +1091,10 @@ div[ng-reflect-ng-switch="multi-year"],div[ng-reflect-ng-switch="year"] {
 .mat-select-panel.viz-select.viz-select-multi {
   left: 44px;
 }
+.mat-select-panel.viz-select.viz-select-group {
+  min-width: inherit !important;
+  left: 32px;
+}
 .mat-form-field {
   vertical-align: middle;
   &.mat-form-field-disabled {
