308 Form Field: Disabled --> disabled form bottom border should be dotted. Please see Angular reference

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -451,11 +451,11 @@ td.mat-cell,
     }
   }
 
-  &.mat-form-field-disabled {
-    .mat-form-field-underline {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.42) 0%, rgba(0, 0, 0, 0.42) 100%, transparent 0%) !important
-    }
-  }
+  // &.mat-form-field-disabled {
+  //   .mat-form-field-underline {
+  //     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.42) 0%, rgba(0, 0, 0, 0.42) 100%, transparent 0%) !important
+  //   }
+  // }
 
   input.mat-input-element {
     // height: 24px;
