310 Form Field: Clear Button --> remove yellow highlight and autocomplete dropdown/ when typing

--- a/src/assets/examples/form-field-clear-button/form-field-clear-button.component.html
+++ b/src/assets/examples/form-field-clear-button/form-field-clear-button.component.html
@@ -1,6 +1,6 @@
 <div class="example-container">
   <mat-form-field>
-    <input matInput placeholder="Form label" [(value)]="value">
+    <input matInput placeholder="Form label" [(value)]="value" autocomplete='off'>
     <mat-icon matSuffix (click)="value = ''">close</mat-icon>
   </mat-form-field>
 </div>
