313 Sidenav category title & Content header on the right of "Radio Buttons" --> global update to "Radio Button" -> Remove "S"

--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -9,7 +9,7 @@
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Radio Buttons
+    Radio Button
   </div>
   <div class="doc-desc-1">
     Radio buttons allow the user to select one option from a set. </div>
