--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -78,7 +78,7 @@
 
 .docs-example-viewer-body {
   // padding: 40px 0;
-  padding-top: 40px;
+  // padding-top: 40px;
   white-space: nowrap;
   text-align: center;
   border-bottom: 1px solid #efefef;
