311 Form Field: Autocomplete, Autocomplete with icon, Option Groups Autocomplete --> we can make the containers longer to fit the dropdowns

--- a/src/assets/examples/form-field-autocomplete-group/form-field-autocomplete-group.component.html
+++ b/src/assets/examples/form-field-autocomplete-group/form-field-autocomplete-group.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="stateForm" class="example-centralization">
-  <mat-form-field>
+<form [formGroup]="stateForm" class="example-container">
+  <mat-form-field class="example-full-width">
     <input type="text" matInput placeholder="States Group" formControlName="stateGroup" required [matAutocomplete]="autoGroup">
     <mat-autocomplete #autoGroup="matAutocomplete" class="viz-autocomplete-dropdown">
       <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
