--- a/src/assets/examples/form-field-clear-button/form-field-clear-button.component.html
+++ b/src/assets/examples/form-field-clear-button/form-field-clear-button.component.html
@@ -1,5 +1,5 @@
 <div class="example-container">
-  <mat-form-field>
+  <mat-form-field class="example-full-width">
     <input matInput placeholder="Form label" [(value)]="value" autocomplete='off'>
     <mat-icon matSuffix (click)="value = ''">close</mat-icon>
   </mat-form-field>
