--- a/src/assets/examples/form-field-prefix-suffix/form-field-prefix-suffix.component.html
+++ b/src/assets/examples/form-field-prefix-suffix/form-field-prefix-suffix.component.html
@@ -1,5 +1,5 @@
 <div class="example-container">
-  <mat-form-field>
+  <mat-form-field class="example-full-width">
     <input matInput placeholder="Telephone" type="text" value="23456789">
     <span matPrefix>+1</span>
     <mat-icon matSuffix>edit</mat-icon>
