--- a/src/assets/examples/form-field-autocomplete/form-field-autocomplete.component.html
+++ b/src/assets/examples/form-field-autocomplete/form-field-autocomplete.component.html
@@ -1,4 +1,4 @@
-<div class="example-centralization">
+<div class="example-container">
   <mat-form-field class="example-full-width">
     <input type="text" placeholder="Autocomplete" aria-label="Assignee" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="viz-autocomplete-dropdown">
