--- a/src/assets/examples/form-field-basic/form-field-basic.component.scss
+++ b/src/assets/examples/form-field-basic/form-field-basic.component.scss
@@ -1,5 +1,7 @@
-:host {
-  mat-form-field {
-    margin-right: 32px
-  }
+.example-full-width {
+  width: 100%;
+}
+.example-container {
+  width: 200px;
+  margin: 0 auto;
 }
