--- a/src/assets/examples/form-field-clear-button/form-field-clear-button.component.scss
+++ b/src/assets/examples/form-field-clear-button/form-field-clear-button.component.scss
@@ -1,4 +1,7 @@
+.example-full-width {
+  width: 100%;
+}
 .example-container {
-    width: 200px;
-    margin: 0 auto;
+  width: 200px;
+  margin: 0 auto;
 }
