--- a/src/assets/examples/form-field-custom-phone-number/form-field-custom-phone-number.component.html
+++ b/src/assets/examples/form-field-custom-phone-number/form-field-custom-phone-number.component.html
@@ -1,5 +1,5 @@
 <div class="example-container">
-  <mat-form-field>
+  <mat-form-field class="example-full-width">
     <my-tel-input placeholder="Phone number" required></my-tel-input>
     <mat-icon matSuffix>phone</mat-icon>
   </mat-form-field>
