--- a/src/assets/examples/form-field-disable/form-field-disable.component.html
+++ b/src/assets/examples/form-field-disable/form-field-disable.component.html
@@ -1,5 +1,5 @@
-<div class="example-centralization">
-  <mat-form-field>
+<div class="example-container">
+  <mat-form-field class="example-full-width">
     <input
       type="text"
       matInput
