--- a/src/assets/examples/form-field-error/form-field-error.component.html
+++ b/src/assets/examples/form-field-error/form-field-error.component.html
@@ -1,4 +1,4 @@
-<div class="example-centralization">
+<div class="example-container">
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Form label error" [formControl]="emailFormControl" value="Input here" autocomplete='off'/>
     <!-- <mat-error
