--- a/src/assets/examples/form-field-basic/form-field-basic.component.html
+++ b/src/assets/examples/form-field-basic/form-field-basic.component.html
@@ -1,12 +1,5 @@
 <div class="example-container">
   <mat-form-field class="example-full-width">
-    <input
-      type="text"
-      matInput
-      autocomplete="off"
-      [(ngModel)]="value"
-      (blur)="value = 'Input here'"
-      placeholder="Form label"
-    />
+    <input type="text" matInput autocomplete="off" placeholder="Default Form Field" />
   </mat-form-field>
 </div>
