--- a/src/assets/examples/form-field-disable/form-field-disable.component.html
+++ b/src/assets/examples/form-field-disable/form-field-disable.component.html
@@ -5,7 +5,7 @@
       matInput
       autocomplete="off"
       [(ngModel)]="value"
-      placeholder="Form label disabled"
+      placeholder="Disable form field"
       disabled="true"
     />
   </mat-form-field>
