--- a/src/assets/examples/form-field-error/form-field-error.component.html
+++ b/src/assets/examples/form-field-error/form-field-error.component.html
@@ -1,6 +1,6 @@
 <div class="example-container">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Form label error" [formControl]="emailFormControl" value="Input here" autocomplete='off'/>
+    <input matInput placeholder="Error Form Field" [formControl]="emailFormControl" autocomplete='off'/>
     <!-- <mat-error
       *ngIf="
         emailFormControl.hasError('email') &&
