320 Form Field: Form Hint --> remove "Input here" -> show EMPTY state at first like other form fields

--- a/src/assets/examples/form-field-hint/form-field-hint.component.html
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.html
@@ -4,9 +4,7 @@
       type="text"
       matInput
       autocomplete="off"
-      (focus)="value = ''"
-      [(ngModel)]="value"
-      placeholder="Form label"
+      placeholder="Form label with hint"
     />
     <mat-hint align="start">Form hint</mat-hint>
   </mat-form-field>
