--- a/projects/demo/src/app/pages/demo/demo.component.scss
+++ b/projects/demo/src/app/pages/demo/demo.component.scss
@@ -1,6 +1,6 @@
 .viewport-iframe-wrapper {
     box-sizing: border-box;
-    padding-top: 15px;
+    padding: 56px 0px;
     position: relative;
     height: 100%;
     width: 100%;
