set select width to 200px

--- a/src/assets/examples/select-disable/select-disable.component.html
+++ b/src/assets/examples/select-disable/select-disable.component.html
@@ -1,5 +1,5 @@
-<div class="example-centralization">
-  <mat-form-field>
+<div class="example-wrapper">
+  <mat-form-field class="example-full-width">
     <mat-select
       placeholder="Date Type"
       disableOptionCentering
