--- a/src/assets/examples/select-trigger-text/select-trigger-text.component.html
+++ b/src/assets/examples/select-trigger-text/select-trigger-text.component.html
@@ -1,5 +1,5 @@
 <div class="example-wrapper">
-  <mat-form-field>
+  <mat-form-field class="example-fullw-width">
     <mat-select placeholder="States" disableOptionCentering disableRipple [formControl]="toppings" multiple panelClass="viz-select viz-select-multi">
       <mat-select-trigger>
         {{toppings.value ? toppings.value[0] : ''}}
