--- a/src/assets/examples/select-multiple-selection/select-multiple-selection.component.html
+++ b/src/assets/examples/select-multiple-selection/select-multiple-selection.component.html
@@ -1,5 +1,5 @@
 <div class="example-wrapper">
-  <mat-form-field>
+  <mat-form-field class="example-full-width">
     <mat-label>States</mat-label>
     <mat-select placeholder="Select states" disableOptionCentering disableRipple [formControl]="toppings" multiple panelClass="viz-select viz-select-multi">
       <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
