305, 306 Paginator	 --> when the dropdown opens, the selected number and the number in the dropdown should be at the exact position and same font size 14pt. Please see 2 reference links for better explanation

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -831,8 +831,7 @@ mat-chip {
   }
   
 }
-
-div[ng-reflect-klass="mat-select-panel mat-primary"] {
+.cdk-overlay-pane {
   .mat-select-content {
     .mat-option {
       // height: 40px;
